package hu.simplexion.z2.kotlin.ir.rui.air

import hu.simplexion.z2.kotlin.ir.rui.rum.RumElement

interface AirElement {
    val rumElement: RumElement
}